--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
     "start": "node main.js"
   },
   "dependencies": {
-    "jscodeshift": "0.15.1",
-    "ast-types": "0.14.2"
+    "jscodeshift": "0.15.1"
   }
 }
