Success on HTML codemod without jscodeshift (posthtml-parser, -render)

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "jscodeshift": "17.0.0",
-    "posthtml-parser": "0.12.1"
+    "posthtml-parser": "0.12.1",
+    "posthtml-render": "3.0.0"
   }
 }
